test/frontend/fail/missing_initializer.osl
struct S { int a, b, c; };
shader foo() {
    S s = S(1, 2);
}
